# akpy

./: .env  .gitignore  Makefile  README.md  pyproject.toml
src/akpy/: __init__.py  __main__.py  config.py  entry.py  read.py  utils.py  write.py
tests/: test_akpy.py  test_akpy_entry.py
