[project]
name = "akpy"
version = "0.1.0"
description = "A blueprint for Python projects including useful definitions and utilities for Python development"
readme = "README.md"
authors = [
    { name = "Amir Kantor", email = "amir.kantor@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "ipykernel",
    "nest-asyncio",
    "platformdirs",
    "cleanpy",
    "rich",
    "annotated-types",
    "typeguard",
    "pydantic",
    "pydantic-settings",
    "typer",
    "jsonlines",
    "pyyaml",
    "toml",
    "jsonpickle",
    "numpy",
    "nptyping[complete]",
    "pandas",
    "matplotlib",
]

[dependency-groups]
dev = [
    "pytest",
]

[project.scripts]
akpy = "akpy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
