[project]
name = "akpy"
version = "0.1.0"
description = "A blueprint for Python projects including useful definitions and utilities for Python development"
readme = "README.md"
authors = [
    { name = "Amir Kantor", email = "amir.kantor@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "ipykernel",
    "nest-asyncio",
    "platformdirs",
    "cleanpy",
    "rich",
    "annotated-types",
    "typeguard",
    "pydantic",
    "pydantic-settings",
    "typer",
    "jsonlines",
    "pyyaml",
    "toml",
    "jsonpickle",
    "numpy",
    "nptyping[complete]",
    "pandas",
    "matplotlib",
]

[dependency-groups]
dev = [
    "black",
    "isort",
    "ruff",
    "mypy",
    "pyright",
    "pylint",
    "bandit",
    "pytest",
]

[project.scripts]
akpy = "akpy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.mypy]
ignore_errors = true  # skip mypy
strict = true
check_untyped_defs = true

[tool.pyright]
exclude = ["."]  # skip pyright
typeCheckingMode = "strict"

[tool.pylint]
ignore = [".venv", ".git", "src"]  # skip pylint
# ignore = [".venv", ".git"]  # don't skip pylint

[tool.bandit]
exclude_dirs = ["."]  # skip bandit
# exclude_dirs = [".venv", ".git"]  # don't skip bandit

[tool.pytest.ini_options]
# addopts = "--collect-only"  # skip pytest
testpaths = ["tests"]
